--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,9 @@ body {
 #background {
     width:300px;
     height:400px;
-    background:gray;
+    background:#00cc66;
     margin:50px auto;
-    -webkit-animation:bgChange 2s 2s alternate infinite;
+    /* -webkit-animation:bgChange 2s 2s alternate infinite; */
     transition: all 2s ease;
 }
 
