--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
 .colorFFFFFF{
   color : #FFFFFF;
 }
+.colorbgg{
+  background:#24b4de;
+}
 #background {
     width:300px;
     height:400px;
@@ -13,7 +16,7 @@ body {
     transition: all 2s ease;
 }
 a.button {
-  background:#24b4de;
+
 color:#fff;
 font-size:26px;
 cursor: pointer;
