--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
 .colorFFFFFF{
   color : #FFFFFF;
 }
+.colorbgzero{
+  color:#000
+}
+
 .colorbgg{
   background:#24b4de;
 }
@@ -16,7 +20,7 @@ body {
     transition: all 2s ease;
 }
 a.button {
-
+  background:#24b4de;
 color:#fff;
 font-size:26px;
 cursor: pointer;
@@ -105,7 +109,7 @@ input.button{
 
 /* Adding background color to the number values */
  .num-bg {
-    background:#000;
+
     font-size:26px;
     cursor:pointer;
     outline:none;
@@ -113,7 +117,7 @@ input.button{
 }
 
  .num-bg:active {
-    background:#000;
+
      /* color:#fff; */
     font-size:26px;
     cursor:pointer;
@@ -141,7 +145,7 @@ input.button{
 
 /*Adding a background color to the delete button */
 .del-bg {
-    background:#24b4de;
+
     font-size:26px;
     cursor: pointer;
     outline:none;
@@ -149,7 +153,7 @@ input.button{
 }
 
 .del-bg:active {
-    background:#24b4de;
+
     /* color:#FFFFFF; */
     font-size:26px;
     cursor: pointer;
