--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .colorbgg{
-  background:#24b4de;
+  background:##042c38;
 }
 #background {
     width:300px;
@@ -29,7 +29,7 @@ border-bottom:3px solid #399cb9;
 }
 button {
     border:0;
-    color:#fff;
+
 }
 input.button{
 
