--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@ body {
   background:#777;
 }
 .colorFFFFFF{
-  color : #000;
+  color : #FFFFFF;
+  background-color: #FFFFFF;
 }
 .colorbgzero{
   color:#002211
