--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
 }
 .colorFFFFFF{
   color : #FFFFFF;
-  background-color: #FFFFFF;
+  background-color: #000000;
 }
 .colorbgzero{
   color:#002211
